vlib/v/checker/tests/if_match_expr_err.vv
fn main() {
    a := 0
    if match a {
        0 {
            println('a is zero')
        }
        else {
            println('unreachable branch')
        }
    } 5 < 7 {
        println('5 is less than 7')
    }
}
